--- a/sass/layout/_accueil.scss
+++ b/sass/layout/_accueil.scss
@@ -74,6 +74,7 @@ form {
     margin: 0;
   }
   & ol {
+    counter-reset: section;
     list-style-type: none;
     padding: 13px;
     margin: 0;
@@ -84,7 +85,8 @@ form {
     width: 25px;
     height: 25px;
     border-radius: 25px;
-    content: "1";
+    counter-increment: section;
+    content: counters(section,".");
     color: white;
     background: $color-primary;
     display: inline-block;
@@ -245,7 +247,7 @@ footer {
   flex-direction: row;
 }
 
-@media only screen and (min-width: 768px) and (min-width: 1224px){
+@media only screen and (min-width: 768px) {
   header img {
     padding: 30px 0 12px 50px;
     width: 300px;
